--- a/app/src/main/res/layout/startgame.xml
+++ b/app/src/main/res/layout/startgame.xml
@@ -134,7 +134,7 @@
         android:id="@+id/congratulationView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:visibility="gone">
+        android:visibility="gone">
 
         <Button
             android:id="@+id/map"
