--- a/app/src/main/res/layout/startgame.xml
+++ b/app/src/main/res/layout/startgame.xml
@@ -240,36 +240,37 @@
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/guideView"
-        android:layout_width="733dp"
-        android:layout_height="411dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:background="@color/transparentBlack"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/LayoutInStartGame"
-        app:layout_constraintTop_toTopOf="@+id/jupiter"
-        app:layout_constraintVertical_bias="1.0">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0"
+        tools:visibility="visible">
 
         <Button
             android:id="@+id/goOnButton"
             style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="79dp"
             android:layout_height="45dp"
-            android:layout_marginTop="332dp"
-            android:layout_marginEnd="576dp"
+            android:layout_marginStart="108dp"
+            android:layout_marginBottom="52dp"
             android:background="@color/colorOfAlert"
             android:text="明白"
             android:textColor="@android:color/white"
             android:textSize="18dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
             android:id="@+id/Guide1"
             android:layout_width="187dp"
             android:layout_height="107dp"
-            android:layout_marginTop="72dp"
+            android:layout_marginTop="44dp"
             android:layout_marginEnd="436dp"
             android:background="@color/colorOfAlert"
             android:fontFamily="@font/text_font"
@@ -283,8 +284,8 @@
             android:id="@+id/guide2"
             android:layout_width="150dp"
             android:layout_height="57dp"
-            android:layout_marginStart="28dp"
-            android:layout_marginTop="240dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="176dp"
             android:text="这是地球目前所在的位置，虚线即是地球目前的轨道"
             android:textColor="@android:color/white"
             android:visibility="invisible"
@@ -295,8 +296,8 @@
             android:id="@+id/guide3"
             android:layout_width="127dp"
             android:layout_height="29dp"
-            android:layout_marginTop="264dp"
-            android:layout_marginEnd="36dp"
+            android:layout_marginTop="208dp"
+            android:layout_marginEnd="44dp"
             android:text="这是地球的目的地"
             android:textColor="@android:color/white"
             android:visibility="invisible"
@@ -307,8 +308,8 @@
             android:id="@+id/guide4"
             android:layout_width="126dp"
             android:layout_height="57dp"
-            android:layout_marginTop="264dp"
-            android:layout_marginEnd="308dp"
+            android:layout_marginTop="192dp"
+            android:layout_marginEnd="304dp"
             android:text="不好！地球的轨道出现了一个巨大的障碍物"
             android:textColor="@color/dangerosColor"
             android:visibility="invisible"
@@ -319,18 +320,20 @@
             android:id="@+id/guide5"
             android:layout_width="172dp"
             android:layout_height="101dp"
-            android:layout_marginTop="24dp"
-            android:layout_marginEnd="108dp"
+            android:layout_marginTop="40dp"
+            android:layout_marginEnd="112dp"
             android:text="所幸我们可以利用木星的强大引力来改变地球的运动轨迹，这里显示着木星相对于地球的质量，按下按钮来改变它从而影响地球的轨道"
             android:textColor="@android:color/white"
             android:visibility="invisible"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:visibility="visible" />
 
         <TextView
             android:id="@+id/guide6"
             android:layout_width="187dp"
             android:layout_height="107dp"
+            android:layout_marginBottom="4dp"
             android:fontFamily="@font/text_font"
             android:text="指挥官，祝你好运，相信你一定可以带领地球重新找回希望"
             android:textColor="@color/colorOfTextAlert"
