--- a/app/src/main/res/layout/activity_choose.xml
+++ b/app/src/main/res/layout/activity_choose.xml
@@ -10,11 +10,11 @@
     <Button
         android:id="@+id/ReturnInChoose"
         style="@style/Widget.AppCompat.Button.Borderless"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="11dp"
-        android:background="@android:color/transparent"
+        android:background="@drawable/return_1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
