--- a/app/src/main/res/layout/activity_game2.xml
+++ b/app/src/main/res/layout/activity_game2.xml
@@ -74,6 +74,15 @@
         app:srcCompat="@drawable/cute_earth" />
 
     <ImageView
+        android:id="@+id/barrier_3"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/door"
+        app:layout_constraintStart_toStartOf="@+id/barrier_1"
+        app:srcCompat="@drawable/black_planet" />
+
+    <ImageView
         android:id="@+id/barrier_2"
         android:layout_width="50dp"
         android:layout_height="50dp"
@@ -193,7 +202,7 @@
             android:layout_marginTop="92dp"
             android:background="@color/colorOfAlert"
             android:text="@string/MessageWhenBoom"
-            android:textColor="@color/colorOfTextAlert"
+            android:textColor="@android:color/white"
             android:textSize="19dp"
             android:visibility="visible"
             app:layout_constraintStart_toStartOf="@+id/dialogue"
@@ -207,7 +216,8 @@
             android:layout_marginTop="192dp"
             android:layout_marginEnd="48dp"
             android:background="@color/colorOfAlert"
-            android:textColor="@color/colorOfTextAlert"
+            android:text="再次尝试"
+            android:textColor="@android:color/white"
             android:visibility="visible"
             app:layout_constraintEnd_toEndOf="@+id/dialogue"
             app:layout_constraintTop_toTopOf="@+id/dialogue"
@@ -225,6 +235,33 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0">
+
+
+        <TextView
+            android:id="@+id/congratulation"
+            android:layout_width="151dp"
+            android:layout_height="60dp"
+            android:layout_marginEnd="144dp"
+            android:layout_marginBottom="120dp"
+            android:alpha="1"
+            android:background="@color/colorOfAlert"
+            android:text="@string/congratulationMessage"
+            android:textColor="@android:color/white"
+            android:textSize="19dp"
+            app:layout_constraintBottom_toBottomOf="@+id/imageView10"
+            app:layout_constraintEnd_toEndOf="@+id/imageView10" />
+
+        <ImageView
+            android:id="@+id/imageView10"
+            android:layout_width="369dp"
+            android:layout_height="260dp"
+            android:layout_marginBottom="68dp"
+            android:alpha="0.65"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.523"
+            app:layout_constraintStart_toStartOf="parent"
+            app:srcCompat="@drawable/alertdialoguesmall" />
 
         <Button
             android:id="@+id/map"
@@ -253,32 +290,6 @@
             android:textSize="12dp"
             app:layout_constraintEnd_toEndOf="@+id/imageView10"
             app:layout_constraintTop_toTopOf="@+id/imageView10" />
-
-        <TextView
-            android:id="@+id/congratulation"
-            android:layout_width="151dp"
-            android:layout_height="60dp"
-            android:layout_marginEnd="144dp"
-            android:layout_marginBottom="120dp"
-            android:alpha="1"
-            android:background="@color/colorOfAlert"
-            android:text="@string/congratulationMessage"
-            android:textColor="@android:color/white"
-            android:textSize="19dp"
-            app:layout_constraintBottom_toBottomOf="@+id/imageView10"
-            app:layout_constraintEnd_toEndOf="@+id/imageView10" />
-
-        <ImageView
-            android:id="@+id/imageView10"
-            android:layout_width="369dp"
-            android:layout_height="260dp"
-            android:layout_marginBottom="68dp"
-            android:alpha="0.65"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.523"
-            app:layout_constraintStart_toStartOf="parent"
-            app:srcCompat="@drawable/alertdialoguesmall" />
     </android.support.constraint.ConstraintLayout>
 
 
