--- a/app/src/main/res/layout/startgame.xml
+++ b/app/src/main/res/layout/startgame.xml
@@ -135,7 +135,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="gone"
-        tools:visibility="visible">
+        tools:visibility="gone">
 
         <ImageView
             android:id="@+id/imageView3"
@@ -156,7 +156,7 @@
             android:layout_marginTop="96dp"
             android:background="@color/colorOfAlert"
             android:text="@string/congratulationMessage"
-            android:textColor="@color/colorOfTextAlert"
+            android:textColor="@android:color/white"
             android:textSize="20dp"
             app:layout_constraintStart_toStartOf="@+id/imageView3"
             app:layout_constraintTop_toTopOf="@+id/imageView3" />
@@ -195,7 +195,7 @@
         android:layout_height="match_parent"
         android:background="@color/transparentBlack"
         android:visibility="gone"
-        tools:visibility="gone">
+        tools:visibility="visible">
 
         <ImageView
             android:id="@+id/dialogue"
@@ -226,14 +226,15 @@
             android:textSize="19dp"
             android:visibility="visible"
             app:layout_constraintStart_toStartOf="@+id/dialogue"
-            app:layout_constraintTop_toTopOf="@+id/dialogue" />
+            app:layout_constraintTop_toTopOf="@+id/dialogue"
+            tools:visibility="invisible" />
 
         <Button
             android:id="@+id/cancelButton"
             style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="89dp"
             android:layout_height="36dp"
-            android:layout_marginTop="192dp"
+            android:layout_marginTop="172dp"
             android:layout_marginEnd="48dp"
             android:background="@color/colorOfAlert"
             android:text="再次尝试"
@@ -241,7 +242,54 @@
             android:visibility="visible"
             app:layout_constraintEnd_toEndOf="@+id/dialogue"
             app:layout_constraintTop_toTopOf="@+id/dialogue"
-            tools:text="再次尝试" />
+            tools:text="再次尝试"
+            tools:visibility="gone" />
+
+        <TextView
+            android:id="@+id/Rlimit_text"
+            android:layout_width="275dp"
+            android:layout_height="135dp"
+            android:background="@color/colorOfAlert"
+            android:fontFamily="sans-serif"
+            android:text="          在天体力学中，一个大质量天体对一个小质量天体进行引力作用时，小质量天体可以被大质量天体引力撕裂的最大距离即为洛希极限。(摘自《百度百科》)\n\nTips : 地球流浪时，要注意控制好与星球之间的距离，不要小于洛希极限哦！"
+            android:textColor="@android:color/white"
+            android:textSize="14dp"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="@+id/dialogue"
+            app:layout_constraintEnd_toEndOf="@+id/dialogue"
+            app:layout_constraintHorizontal_bias="0.493"
+            app:layout_constraintStart_toStartOf="@+id/dialogue"
+            app:layout_constraintTop_toTopOf="@+id/dialogue"
+            app:layout_constraintVertical_bias="0.229" />
+
+        <Button
+            android:id="@+id/R_limit"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="89dp"
+            android:layout_height="36dp"
+            android:layout_marginBottom="32dp"
+            android:background="@color/colorOfAlert"
+            android:text="洛希极限？"
+            android:textColor="@android:color/white"
+            android:visibility="visible"
+            app:layout_constraintBottom_toTopOf="@+id/cancelButton"
+            app:layout_constraintStart_toStartOf="@+id/cancelButton"
+            tools:visibility="gone" />
+
+        <Button
+            android:id="@+id/gotIt"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="72dp"
+            android:layout_height="36dp"
+            android:layout_marginStart="228dp"
+            android:layout_marginTop="12dp"
+            android:background="@color/colorOfAlert"
+            android:text="@string/got_it"
+            android:textColor="@android:color/white"
+            android:textSize="16dp"
+            android:visibility="invisible"
+            app:layout_constraintStart_toStartOf="@+id/Rlimit_text"
+            app:layout_constraintTop_toBottomOf="@+id/Rlimit_text" />
     </android.support.constraint.ConstraintLayout>
 
     <android.support.constraint.ConstraintLayout
